<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_create_room_bj"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingLeft="16dp"
    android:paddingEnd="16dp"
    android:paddingRight="16dp">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="11dp"
        android:clickable="true"
        android:focusable="true"
        android:paddingBottom="10dp"
        android:scaleType="center"
        android:src="@drawable/homepage_icon_fold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        android:text="@string/room_name"
        android:textColor="#333333"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_room_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:inputType="text"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f0f0f0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:drawablePadding="5dp"
        android:text="@string/audio_bitrate"
        android:textColor="#333333"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_audio_bitrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:inputType="number"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f0f0f0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:drawablePadding="5dp"
        android:text="@string/audio_channel_count"
        android:textColor="#333333"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_audio_channel_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:inputType="number"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f0f0f0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:drawablePadding="5dp"
        android:text="@string/latency_mode"
        android:textColor="#333333"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_latency_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:inputType="number"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f0f0f0" />

    <Button
        android:id="@+id/bt_create_now"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/btn_blue_bg_selector"
        android:gravity="center"
        android:text="@string/create_now"
        android:textColor="@android:color/white"
        android:textSize="16sp" />
</LinearLayout>
