<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray">

    <LinearLayout
        android:id="@+id/ll_toolbar"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:gravity="end|center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_background_music_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="?android:selectableItemBackground"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_exit_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="?android:selectableItemBackground"
            android:text="@string/exit_room"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="18sp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_seats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_toolbar"
        android:background="@android:color/white"
        android:overScrollMode="never"
        android:scrollbars="none" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll_feature"
        android:layout_below="@id/rv_seats" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/ll_feature"
        android:background="@android:color/black" />

    <LinearLayout
        android:id="@+id/ll_feature"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_mic_state"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:gravity="center"
            android:text="Mic关"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="16sp"
            tools:text="Mic关" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/tv_speaker_state"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:gravity="center"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="16sp"
            tools:text="静音关" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/tv_sound_effect"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:gravity="center"
            android:text="@string/sound_effect"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="16sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/tv_comment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:gravity="center"
            android:text="@string/comment"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="16sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_input"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <include
            layout="@layout/layout_send_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/black" />

    <FrameLayout
        android:id="@+id/fl_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66000000"
        android:visibility="gone">

        <ProgressBar
            style="@android:style/Widget.ProgressBar.Inverse"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center" />
    </FrameLayout>
</RelativeLayout>